--- a/package.json
+++ b/package.json
@@ -14,12 +14,18 @@
         "alpinejs": "^2.7.3",
         "autoprefixer": "^9.8.6",
         "axios": "^0.19",
+        "browser-sync": "^2.26.5",
+        "browser-sync-webpack-plugin": "^2.0.1",
         "cross-env": "^7.0",
-        "laravel-mix": "^5.0.1",
+        "laravel-mix": "^5.0.9",
         "lodash": "^4.17.19",
         "postcss-import": "^12.0.1",
         "resolve-url-loader": "^3.1.0",
         "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.0.1",
         "vue-template-compiler": "^2.6.12"
+    },
+    "dependencies": {
+        "css-loader": "^1.0.1",
+        "webpack": "^4.44.2"
     }
 }
