Added user seeder, prepared views for implementation

--- a/tests_codeception/acceptance.suite.yml
+++ b/tests_codeception/acceptance.suite.yml
@@ -11,9 +11,9 @@ modules:
         url: http://localhost:8888
     - \Helper\Acceptance
     - Db:
-        dsn: 'mysql:host=127.0.0.1;dbname=test'
-        user: 'test'
-        password: 'test123'
+        dsn: 'mysql:host=127.0.0.1;dbname=event_web'
+        user: 'admin'
+        password: '123'
         populate: true
         cleanup: true
         dump: tests_codeception/_data/dump.sql
